--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css">
+    <link rel="stylesheet" href="lib/css/zenburn.css">
   </head>
   <body>
     <div class="reveal">
       <div class="slides" id="slides"></div>
     </div>
 
+    <script src="lib/js/head.min.js" type="text/javascript"></script>
     <script src="js/reveal.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
